Fix spacing of student rows

--- a/client/src/app/family/add-family.component.scss
+++ b/client/src/app/family/add-family.component.scss
@@ -3,11 +3,11 @@
   font-size: 16px;
 }
 
-.family-button {
-  font-size: 18px;
-}
-
 .remove-button{
   margin-bottom: 1.25rem;
   margin-left: .75rem;
+}
+
+.student-fields {
+  padding-bottom: 18px;
 }
